[package]
name = "scrooge"
version = "0.1.0"
authors = ["Rafael Caricio <foss@caric.io>"]
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1.21"
log = "0.4"
pretty_env_logger = "0.3"
lazy_static = "1.3"
unicase = "2.3"
config = "0.9"
toml = "0.4.1"
serde = { version = "1.0.8", features = ["derive"] }
human-size = "0.4"
structopt = "0.2"